--- a/webdev/index.html
+++ b/webdev/index.html
@@ -13,7 +13,7 @@
         frag = frag.replace("|","~");
         frag = frag.replace(/;/g,"/");
         frag = frag.replace(/\|/g, ".");
-        window.document.location = "http://localhost/" + frag;
+        window.document.location = "http://jk.onshore.com/" + frag;
         return false;
       }); 
       jQuery(".webdev-application a").click(function() { 
@@ -51,13 +51,12 @@
       <li class="application"><a href="http://localhost/~admin/2011/5/6/WebDesign.app/webdev">This Project - Apache Version</a></li>
     </ul>
     <ul id="native-application-list">
-      <li class="native-application"><a class="apps" href="#app|Gaydar">Gaydar App</a></li>
       <li class="native-application"><a class="apps" href="#app|IStimuli">IStimuli</a></li>
       <li class="native-application"><a class="apps" href="#app|ITransform">ITransform</a></li>
       <li class="native-application"><a class="apps" href="#app|LogicalVolumeManager">LogicalVolumeManager</a></li>
-      <li class="native-application"><a class="apps" href="#app|Exhibit">Exhibit</a></li>
       <li class="native-application"><a class="apps" href="#app|Forum">Forum</a></li>
       <li class="native-application"><a class="apps" href="#app|OnshoreFm">OnshoreFm</a></li>
+      <li class="native-application"><a class="apps" href="#app|Tabulator">Tabulator</a></li>
       <li class="native-application"><a class="apps" href="#app|Ls,new">Ls</a></li>
       <li class="native-application"><a class="apps" href="#app|Bsdiff,app">BsDiff</a></li>
       <li class="native-application"><a class="apps" href="#app|Pim">Pim</a></li>
@@ -65,13 +64,10 @@
     <ul li="design-application-list">
       <li class="webdev-application"><a class="apps" href="#a|RealEstate|real-estate">real-estate</a></li>
       <li class="webdev-application"><a class="apps" href="#a|RealEstate|real-estate-splash">real-estate-splash</a></li>
-      <li class="webdev-application"><a class="apps" href="#a|FilmStudent|xmpedit">xmpedit</a></li>
-      <li class="webdev-application"><a class="apps" href="#a|FilmStudent|filmstudent_design">filmstudent_design</a></li>
       <li class="webdev-application"><a class="apps" href="#a|DocumentationHelper|appledocs">Documentation Helper</a></li>
     </ul>
     <ul li="date-application-list">
       <li class="date-application"><a class="apps" href="#|admin;2011;5;6;extensible">extensible app</a></li>
-      <li class="date-application"><a class="apps" href="#|admin;2011;2;20;portal;public">onguard portal</a></li>
       <li class="date-application"><a class="apps" href="#|admin;2011;2;25;webutil|html">web utilities</a></li>
       <li class="date-application"><a class="apps" href="#|admin;2011;4;9;Forum|design|site|iweb">Forum Design</a></li>
       <li class="date-application"><a class="apps" href="#|admin;2011;5;7;Books;Readme|html">Library Readme</a></li>
